# imgpacker

./: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
doc/: Doxyfile
m4/: stdcxx0x.m4
po/: POTFILES.in  POTFILES.skip
src/: main.cc
src/imgpack/: application.cc  application.hh  async-operation.cc  async-operation.hh  bin-packer.cc  bin-packer.hh  collage-generator.cc  collage-generator.hh  collage-viewer.cc  collage-viewer.hh  image-list.cc  image-list.hh  image-loader.cc  image-loader.hh  imgpackapplication.cc  imgpackapplication.hh  logger.cc  logger.hh  main-window.cc  main-window.hh  pixbuf-loader.cc  pixbuf-loader.hh  thread-pool.cc  thread-pool.hh
src/imgpack/algorithm/: bin-packer.cc  bin-packer.hh  rectangles.cc  rectangles.hh
src/imgpack/gtkui/: collage-treeview.cc  collage-treeview.hh  collage-viewer.cc  collage-viewer.hh  gtk-application.cc  gtk-application.hh  image-list.cc  image-list.hh  main-window.cc  main-window.hh  pixbuf-loader.cc  pixbuf-loader.hh
src/imgpack/util/: async-operation.cc  async-operation.hh  logger.cc  logger.hh  thread-pool.cc  thread-pool.hh
